--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,44 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<h1>Books</h1>
+
+<div>
+	<table>
+		<thead>
+			<th>Title</th>
+			<th>Body</th>
+		</thead>
+		<tbody>
+			<% @books.each do |book| %>
+				<th><%= book.title %></th>
+				<th><%= book.body %></th>
+				<th>
+					<ul>
+						<li><%= link_to 'Show', book_path(book) %></li>
+						<li><%= link_to 'Edit', edit_book_path(book) %></li>
+						<li>
+							<%= link_to 'Delete', book_path(book), method: :delete,
+							"data-confirmation" => "本当に削除してもよろしいですか？" %>
+						</li>
+					</ul>
+				</th>
+			<% end %>
+		</tbody>
+	</table>
+</div>
+
+<section>
+	<h2>New book</h2>
+
+	<%= form_for(@book) do |f| %>
+
+		<p>Title</p>
+		<%= f.text_field :title %>
+
+		<p>Body</p>
+		<%= f.text_area :body %>
+
+		<%= f.submit 'Create Book' %>
+
+	<% end %>
+</section>
+
+
