--- a/app/views/books/root.html.erb
+++ b/app/views/books/root.html.erb
@@ -1,4 +1,4 @@
-<h1 class="root-headline">ようこそ Bookers へ！</h1>
+<h1>ようこそ Bookers へ！</h1>
 
 <p class="root-p"><strong>Bookers</strong> では、さまざまな書籍に関するあなたの意見や</p>
 <p class="root-p">印象を共有し交換することができます</p>
