--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,15 +1,15 @@
 <h1>Books</h1>
 
-<div>
+<div id="list">
 	<table>
 		<thead>
-			<th>Title</th>
-			<th>Body</th>
+			<th class="title">Title</th>
+			<th class="body">Body</th>
 		</thead>
 		<tbody>
 			<% @books.each do |book| %>
-				<th><%= book.title %></th>
-				<th><%= book.body %></th>
+				<th class="title"><%= book.title %></th>
+				<th class="body"><%= book.body %></th>
 				<th>
 					<ul>
 						<li><%= link_to 'Show', book_path(book) %></li>
@@ -25,16 +25,20 @@
 	</table>
 </div>
 
-<section>
+<section id="form">
 	<h2>New book</h2>
 
 	<%= form_for(@book) do |f| %>
 
-		<p>Title</p>
-		<%= f.text_field :title %>
+		<div class="field">
+			<p>Title</p>
+			<%= f.text_field :title  %>
+		</div>
 
-		<p>Body</p>
-		<%= f.text_area :body %>
+		<div class="field">
+			<p>Body</p>
+			<%= f.text_area :body  %>
+		</div>
 
 		<%= f.submit 'Create Book' %>
 
