--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,10 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<% flash.each do |message_type, message| %>
+		<h4 class="message"><%= message %></h4>
+<% end %>
+
+<p class="detail"><strong>Title:</strong> <%= @book.title %></p>
+
+<p class="detail"><strong>Body:</strong> <%= @book.body %></p>
+
+
+<%= link_to 'Edit', edit_book_path(@book) %> | <%= link_to 'Back', books_path %>
