--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,21 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<h1>Editing Book</h1>
+
+<div class="form">
+	<%= form_for(@book) do |f| %>
+
+		<div class="field">
+			<p>Title</p>
+			<%= f.text_field :title %>
+		</div>
+
+		<div class="field">
+			<p>Body</p>
+			<%= f.text_area :body %>
+		</div>
+
+		<%= f.submit 'Update Book' %>
+
+	<% end %>
+</div>
+
+<%= link_to 'Show', book_path(@book) %> | <%= link_to 'Back', books_path %>
